# Delulu-Stream

./: .env.example  .gitignore  GEMINI_NATIVE_LOADING_PLAN.md  LICENSE  README.md
embegator/: Cargo.toml
embegator-publish/: .gitignore
embegator-publish/src/: network.rs
embegator/bypass/: bypass.js  package-lock.json  package.json
embegator/src/: app.rs  models.rs  ui.rs
gods_EYE/: README.md  fetch_vidlink.js  fetch_vidlink_curl.js  gods_EYE.bat  gods_EYE.ps1  test_valid_url.js
gods_EYE/src/: main.rs
tauri.deluluapp/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
tauri.deluluapp/scripts/: run-tauri-with-setup.cjs  sync-algolia-index.mjs
tauri.deluluapp/src/: App.tsx
tauri.deluluapp/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri.deluluapp/src-tauri/capabilities/: default.json
tauri.deluluapp/src-tauri/src/: addon_runtime.rs  lib.rs  proxy.rs  stremio_addon_runtime.rs
tauri.deluluapp/src-tauri/src/discord_presence/: mod.rs  models.rs  rpc_client.rs
tauri.deluluapp/src/addon_manager/: manager.ts  types.ts
tauri.deluluapp/src/components/content/: ContentCard.css  ContentCard.tsx  ContentRow.css  ContentRow.tsx  FavoritesButton.tsx  HeroCarousel.css  HeroCarousel.tsx  SeasonDropdown.tsx  SeasonEpisodeSelector.css  SeasonEpisodeSelector.tsx  TorrentButton.tsx  TorrentDetailsUI.css  TorrentDetailsUI.tsx  WatchlistButton.tsx
tauri.deluluapp/src/components/layout/: Footer.tsx  Navbar.css  SearchModal.css  SearchModal.tsx  TitleBar.tsx  UserDropdown.css  UserDropdown.tsx
tauri.deluluapp/src/components/loading/: PremiumLoader.css  (+1 more)
tauri.deluluapp/src/context/: AddonContext.tsx  PlayerContext.tsx  UserListsContext.tsx  UserProfileContext.tsx
tauri.deluluapp/src/hooks/: useDeferredBusy.ts
tauri.deluluapp/src/pages/: Details.css  Details.tsx  GlobalPlayer.tsx  Home.css  Home.tsx  Movies.tsx  MyList.css  MyList.tsx  PlayerStream.css  Random.css  Random.tsx  Search.css  Search.tsx  Settings.css  Settings.tsx  TVShows.tsx  VidLinkStream.css
tauri.deluluapp/src/services/: advancedLogs.ts  cacheManager.ts  discoveryService.ts  imageCache.ts  streamAdapter.ts  streamCache.ts  tmdb.ts  userLists.ts  vidlink.ts  watchHistory.ts
tauri.deluluapp/src/styles/: index.css
tauri.deluluapp/src/utils/: hlsProxy.ts  pathResolver.ts  productionGuard.ts
(+6 files in other folders)
