[package]
name = "gods_EYE"
version = "0.1.0"
edition = "2021"
description = "Terminal-based Network Diagnostics & Media Interoperability Tool"

[dependencies]
tokio      = { version = "1",    features = ["full"] }
rquest     = { version = "5.1.0", features = ["json", "gzip", "brotli"], default-features = false }
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
anyhow     = "1"
chrono     = "0.4"
clap = { version = "4.5.60", features = ["derive"] }
rquest-util = "2.2.1"
urlencoding = "2.1.3"

[profile.release]
opt-level = 3
lto       = true
strip     = true
