[package]
name = "delulu"
version = "1.0.0"
description = "Delulu - Movie & TV Streaming Desktop App"
authors = ["Delulu Team"]
edition = "2021"

[lib]
name = "delulu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
axum = "0.7"
rquest = { version = "5.1.0", features = ["json", "gzip", "brotli"], default-features = false }
rquest-util = "2.2.1"
url = "2"
urlencoding = "2"
tokio = { version = "1", features = ["net", "time", "sync", "process", "io-util"] }
lru = "0.12"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
discord-rich-presence = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
thiserror = "2.0"
tracing = "0.1"
parking_lot = "0.12"
indexmap = { version = "2.7", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

[features]
# DevTools only in dev builds — stripped entirely from release binary
devtools = ["tauri/devtools"]

# Release profile: max optimization + strip symbols
[profile.release]
opt-level = "s"        # Optimize for binary size
lto = true              # Link-time optimization — dead code elimination + inlining
codegen-units = 1       # Single codegen unit = better optimization
panic = "abort"         # No unwinding = smaller binary + no panic backtraces
strip = true            # Strip debug symbols from binary
